[gd_scene load_steps=7 format=3 uid="uid://cyeoxleqt4rh3"]

[ext_resource type="Script" uid="uid://djr3gjoel5hvu" path="res://components/sidebar/score_board/score_board.gd" id="1_h3gst"]
[ext_resource type="Texture2D" uid="uid://di6p3algn2phw" path="res://art/ui/player_avatars/player_avatar_1.png" id="1_ipo7w"]
[ext_resource type="Texture2D" uid="uid://w1w1hh4aecte" path="res://art/ui/icons/hearts/heart_1.png" id="3_ji7v2"]
[ext_resource type="FontFile" uid="uid://bod7p1tgb4nl8" path="res://art/fonts/PixeloidSans-Bold.ttf" id="4_nuvu3"]
[ext_resource type="Theme" uid="uid://dvuhetf2ik7ji" path="res://themes/red.tres" id="5_7bpm3"]
[ext_resource type="Theme" uid="uid://dl25uyibjceuu" path="res://themes/yellow.tres" id="6_jvnn5"]

[node name="ScoreBoard" type="PanelContainer"]
custom_minimum_size = Vector2(72, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 31.0
grow_vertical = 2
script = ExtResource("1_h3gst")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
text = "Small Blind"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("1_ipo7w")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("3_ji7v2")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("3_ji7v2")
expand_mode = 2
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
texture = ExtResource("3_ji7v2")
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="PanelContainer5" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Draw Limit"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="DrawCountLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "0"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 4
text = "/"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DrawLimitLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer5/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "3"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Cards"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="CardCountLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer3/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "7"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_7bpm3")
theme_override_font_sizes/font_size = 5
text = "Info"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Round"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="RoundLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "1"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Turn"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="TurnLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer/PanelContainer4/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "0"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_jvnn5")
theme_override_font_sizes/font_size = 5
text = "Menu"

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 4
text = "Money"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="MoneyLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/GridContainer/PanelContainer4/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_nuvu3")
theme_override_font_sizes/normal_font_size = 5
text = "$0"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
